tests/snapshot/snapshots/snapshot__error_stderr_interpolate_record_type_field.ncl.snap
---
source: tests/snapshot/main.rs
expression: err
---
error: invalid record literal
  ┌─ [INPUTS_PATH]/errors/interpolate_record_type_field.ncl:4:18
  │
4 │ let a = "foo" in { "%{a}" : Number }
  │                  ^^^^^^^^^^^^^^^^^^^
  │                    │
  │                    this field uses interpolation
  │
  = A record type is a literal composed only of type annotations, of the form `<field>: <type>`.
  = String interpolation in field names is forbidden in record types


